initial open source release